--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Loïc Bertolotto</title>
+  <title>Portfolio - Loïc Bertolotto</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
@@ -11,5 +11,5 @@
   <div class="wrapper">
     <app-root></app-root>
   </div>
-<script src="runtime-es2015.0811dcefd377500b5b1a.js" type="module"></script><script src="runtime-es5.0811dcefd377500b5b1a.js" nomodule defer></script><script src="polyfills-es5.1a3c78b07cd6f16c6e9a.js" nomodule defer></script><script src="polyfills-es2015.1f913f16a2d346cc8bdc.js" type="module"></script><script src="scripts.968f55bfb751cd0febb2.js" defer></script><script src="main-es2015.0e931f757720d10b9a83.js" type="module"></script><script src="main-es5.0e931f757720d10b9a83.js" nomodule defer></script></body>
+<script src="runtime-es2015.0811dcefd377500b5b1a.js" type="module"></script><script src="runtime-es5.0811dcefd377500b5b1a.js" nomodule defer></script><script src="polyfills-es5.1a3c78b07cd6f16c6e9a.js" nomodule defer></script><script src="polyfills-es2015.1f913f16a2d346cc8bdc.js" type="module"></script><script src="scripts.968f55bfb751cd0febb2.js" defer></script><script src="main-es2015.d265f26641f24ef4df1e.js" type="module"></script><script src="main-es5.d265f26641f24ef4df1e.js" nomodule defer></script></body>
 </html>
